syntax = "proto3";


message InitRequest {
    enum Type {
        create = 0;
        write = 1;
        read = 2;
        subscribe = 3;
    }
    Type type = 1;
    optional bytes datacapsule_hash = 2; // for read, write, subscribe requests
}

message InitResponse {
    bool init_success = 2;
}

